[gd_scene load_steps=3 format=3 uid="uid://bjx3l4o4vmxby"]

[ext_resource type="Script" path="res://LangDocs/prog_calc_func.gd" id="1_7uadh"]
[ext_resource type="Theme" uid="uid://duan326d8yya2" path="res://big_font.tres" id="1_lxq7l"]

[node name="progCALC_FUNC" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uadh")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 122.0
theme = ExtResource("1_lxq7l")
text = "Number 1:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 73.0
offset_right = 321.0
offset_bottom = 195.0
theme = ExtResource("1_lxq7l")
text = "Operation:"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_top = 155.0
offset_right = 320.0
offset_bottom = 277.0
theme = ExtResource("1_lxq7l")
text = "Number 2:"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 408.0
offset_right = 325.0
offset_bottom = 530.0
theme = ExtResource("1_lxq7l")
text = "Result:"

[node name="txtNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 217.0
offset_top = 7.0
offset_right = 345.0
offset_bottom = 60.0

[node name="txtNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 225.0
offset_top = 167.0
offset_right = 353.0
offset_bottom = 220.0

[node name="lblout" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 166.0
offset_top = 419.0
offset_right = 401.0
offset_bottom = 534.0

[node name="AddButton" type="Button" parent="."]
layout_mode = 0
offset_left = 602.0
offset_top = 76.0
offset_right = 692.0
offset_bottom = 147.0
theme = ExtResource("1_lxq7l")
text = "+"

[node name="ModButton" type="Button" parent="."]
layout_mode = 0
offset_left = 893.0
offset_top = 179.0
offset_right = 983.0
offset_bottom = 250.0
theme = ExtResource("1_lxq7l")
text = "mod"

[node name="POWButton" type="Button" parent="."]
layout_mode = 0
offset_left = 694.0
offset_top = 188.0
offset_right = 790.0
offset_bottom = 259.0
theme = ExtResource("1_lxq7l")
text = "**"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 710.0
offset_top = 528.0
offset_right = 1039.0
offset_bottom = 617.0
theme = ExtResource("1_lxq7l")
text = "Exit"

[node name="ClearButton" type="Button" parent="."]
layout_mode = 0
offset_left = 712.0
offset_top = 417.0
offset_right = 1041.0
offset_bottom = 506.0
theme = ExtResource("1_lxq7l")
text = "clear"

[node name="DivButton" type="Button" parent="."]
layout_mode = 0
offset_left = 974.0
offset_top = 79.0
offset_right = 1064.0
offset_bottom = 150.0
theme = ExtResource("1_lxq7l")
text = "/"

[node name="MultButton" type="Button" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 82.0
offset_right = 942.0
offset_bottom = 153.0
theme = ExtResource("1_lxq7l")
text = "*"

[node name="SubButton" type="Button" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 84.0
offset_right = 821.0
offset_bottom = 155.0
theme = ExtResource("1_lxq7l")
text = "-"

[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="ModButton" to="." method="_on_mod_button_pressed"]
[connection signal="pressed" from="POWButton" to="." method="_on_pow_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="DivButton" to="." method="_on_div_button_pressed"]
[connection signal="pressed" from="MultButton" to="." method="_on_mult_button_pressed"]
[connection signal="pressed" from="SubButton" to="." method="_on_sub_button_pressed"]
